# Wolf3d

./: .4k_mode.sh  .linux_install_frameworks.sh  .mac_install_frameworks.sh  .normal_mode.sh  CMakeLists.txt  FLEX  Makefile  README.md  main.c  map  run.sh  wolf3d
.objs/: cast_rays.d  keys.d  keys_2.d  main.d  sdl.d  sdl_init.d  time.d  walls_init.d  wolf_init.d
.objs/Map/: add_to_text.d  check_file.d  check_for_symbol.d  read_map.d
.objs/Utils/: ft.d  ft_2.d  ft_itoa.d  get_nl.d  list.d  list_2.d
Frameworks/SDL2.framework/Versions/A/SDL2.dSYM/Contents/: Info.plist
Frameworks/SDL2.framework/Versions/A/SDL2.dSYM/Contents/Resources/DWARF/: SDL2
Frameworks/SDL2_image.framework/Versions/A/Frameworks/webp.framework/Versions/A/webp.dSYM/Contents/Resources/DWARF/: webp
Frameworks/SDL2_image.framework/Versions/A/SDL2_image.dSYM/Contents/: Info.plist
Frameworks/SDL2_image.framework/Versions/A/SDL2_image.dSYM/Contents/Resources/DWARF/: SDL2_image
Includes/: Wolf3d.h  constants.h  list.h  structures.h  wolf.h
Sources/: .cast_rays.c.swp  cast_rays.c  keys.c  keys_2.c  main.c  sdl.c  sdl_init.c  time.c  walls_init.c  wolf_init.c
Sources/Map/: add_to_text.c  check_file.c  check_for_symbol.c  read_map.c
Sources/Utils/: ft.c  ft_2.c  ft_itoa.c  get_nl.c  list.c  list_2.c
Textures/dance_1/: rename.sh
